<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    tools:context="com.example.esdraschaves.aplicativocedro.ShowDataActivity">


    <ImageView
        android:id="@+id/image_web_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:srcCompat="@mipmap/ic_launcher" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="361dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:background="#e0e0e0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/image_copyPassword"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="24dp"
            android:onClick="copyToClipboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_data"
            app:srcCompat="?attr/actionModeCopyDrawable" />

        <ImageButton
            android:id="@+id/image_viewPassword"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="24dp"
            android:onClick="viewPassword"
            app:layout_constraintEnd_toStartOf="@+id/image_copyPassword"
            app:layout_constraintTop_toBottomOf="@+id/text_user_data"
            app:srcCompat="@android:drawable/ic_menu_view" />

        <TextView
            android:id="@+id/text_url_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.195"
            app:layout_constraintStart_toEndOf="@+id/text_url_description"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_url_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/text_url_description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_user_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_user_description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_url_description" />

        <TextView
            android:id="@+id/text_user_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/text_user_description"
            app:layout_constraintTop_toBottomOf="@+id/text_url_data" />

        <TextView
            android:id="@+id/text_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_password_description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user_description" />

        <TextView
            android:id="@+id/text_password_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:inputType="textPassword"
            android:text="TextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/image_viewPassword"
            app:layout_constraintStart_toEndOf="@+id/text_password_description"
            app:layout_constraintTop_toBottomOf="@+id/text_user_data" />

    </android.support.constraint.ConstraintLayout>


    <Button
        android:id="@+id/button_edit_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:background="#25AE90"
        android:onClick="updateAccount"
        android:text="@string/text_edit"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="100dp"
        android:background="#25AE90"
        android:onClick="deleteAccount"
        android:text="@string/text_delete"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />


</android.support.constraint.ConstraintLayout>
